# crpt-test-assignment

./: Makefile  README.md  pyproject.toml  setup.cfg
config/: settings.py  urls.py
nasa/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
nasa/migrations/: 0001_initial.py  0002_taskresult.py
templates/: form_get_task_id.html  form_get_task_result.html
